A stub of a zod thing.
Part of #1.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "target": "es2019",
       "module": "es2020",
+      "moduleResolution": "Node",
       "lib": ["es2020", "DOM", "DOM.Iterable"],
       "declaration": true,
       "outDir": "build/",
