--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "repository": "jkomoros/code-sprout",
     "type": "module",
     "scripts": {
-      "start": "tsc --watch --preserveWatchOutput"
+        "start": "tsc --watch --preserveWatchOutput"
     },
-    "dependencies": {},
+    "dependencies": {
+        "zod": "^3.22.4"
+    },
     "devDependencies": {
-      "typescript": "^4.7.2"
+        "typescript": "^4.7.2"
     }
-  }
-  
+}
