--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
         "start": "tsc --watch --preserveWatchOutput"
     },
     "dependencies": {
+        "eslint": "^8.56.0",
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.15.0",
+        "@typescript-eslint/parser": "^6.15.0",
         "typescript": "^4.7.2"
     }
 }
