--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
         "start": "tsc --watch --preserveWatchOutput"
     },
     "dependencies": {
-        "@polymath-ai/ai": "^0.0.5",
         "dotenv": "^16.3.1",
         "enquirer": "^2.4.1",
         "eslint": "^8.56.0",
         "gpt-tok": "^0.0.1",
+        "openai": "^4.24.1",
         "ts-command-line-args": "^2.5.1",
         "zod": "^3.22.4"
     },
