--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "target": "es2019",
       "module": "es2020",
+      "noEmitOnError": true,
       "moduleResolution": "Node",
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
