--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "dotenv": "^16.3.1",
         "enquirer": "^2.4.1",
         "eslint": "^8.56.0",
+        "fast-json-patch": "^3.1.1",
         "gpt-tok": "^0.0.1",
         "openai": "^4.24.1",
         "ts-command-line-args": "^2.5.1",
