--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "repository": "jkomoros/code-sprout",
     "type": "module",
     "scripts": {
-        "start": "tsc --watch --preserveWatchOutput"
+        "start": "tsc --watch --preserveWatchOutput",
+        "test": "jest"
     },
     "dependencies": {
         "dotenv": "^16.3.1",
@@ -17,9 +18,12 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@types/jest": "^29.5.11",
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
         "@typescript-eslint/parser": "^6.15.0",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.1",
         "typescript": "^4.7.2"
     }
 }
