--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
         "@typescript-eslint/parser": "^6.15.0",
+        "eslint-plugin-jest": "^27.6.0",
         "jest": "^29.7.0",
         "ts-jest": "^29.1.1",
         "typescript": "^4.7.2"
