--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "fast-json-patch": "^3.1.1",
         "gpt-tok": "^0.0.1",
         "openai": "^4.24.1",
+        "sharp": "^0.33.1",
         "ts-command-line-args": "^2.5.1",
         "zod": "^3.22.4"
     },
