Make it so sprouts can live in sprouts dir too.
This dir is not version controlled.

Part of #6.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ _site/
 .DS_Store
 lib/
 
+# Ignore the non-version controlled sprouts folder
+sprouts/
+
 #Ensure that no one checks in the secret config
 *.SECRET.*
 .env
