--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "scripts": {
         "start": "tsc --watch --preserveWatchOutput",
-        "test": "jest"
+        "test": "jest",
+        "generate:listings": "node ./build/tools/generate-directory-listings.js"
     },
     "dependencies": {
         "dotenv": "^16.3.1",
