--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
       "rootDir": ".",
       "strict": true,
     },
-    "include": ["src/**/*.ts"],
+    "include": ["src/**/*.ts", "tools/**/*.ts"],
     "exclude": []
   }
