--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "tsc --watch --preserveWatchOutput",
         "test": "jest",
-        "generate:listings": "node ./build/tools/generate-directory-listings.js"
+        "generate:listings": "node ./build/tools/generate-directory-listings.js",
+        "generate:schemas": "node ./build/tools/generate-schemas.js"
     },
     "dependencies": {
         "dotenv": "^16.3.1",
@@ -17,7 +18,8 @@
         "openai": "^4.24.1",
         "sharp": "^0.33.1",
         "ts-command-line-args": "^2.5.1",
-        "zod": "^3.22.4"
+        "zod": "^3.22.4",
+        "zod-to-json-schema": "^3.22.3"
     },
     "devDependencies": {
         "@types/jest": "^29.5.11",
