Switch fron config.json to sprout.json.
This will also be a more distinctive file to help diagnose fetching the wrong thing from a remote URL.

Part of #3.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,8 +12,8 @@
     "json.schemas": [
         {
             "fileMatch": [
-                "/examples/*/config.json",
-                "/sprouts/*/config.json"
+                "/examples/*/sprout.json",
+                "/sprouts/*/sprout.json"
             ],
             "url": "/schemas/sprout_config.json"
         },
