Schema validate compilation too.
This will help catch an invalid compilation that needs to be rebuilt.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,12 @@
             ],
             "url": "/schemas/sprout_config.json"
         },
+        {
+            "fileMatch": [
+                "/examples/*/sprout.compiled.json",
+                "/sprouts/*/sprout.compiled.json"
+            ],
+            "url": "/schemas/compiled_sprout.json"
+        },
     ]
 }
