--- a/package.json
+++ b/package.json
@@ -15,19 +15,32 @@
         "eslint": "^8.56.0",
         "fast-json-patch": "^3.1.1",
         "gpt-tok": "^0.0.1",
+        "lit": "^3.1.0",
         "openai": "^4.24.1",
+        "pwa-helpers": "^0.9.1",
+        "redux": "^5.0.1",
+        "redux-thunk": "^3.1.0",
         "sharp": "^0.33.1",
         "ts-command-line-args": "^2.5.1",
         "zod": "^3.22.4",
         "zod-to-json-schema": "^3.22.3"
     },
     "devDependencies": {
+        "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-dynamic-import-vars": "^2.1.2",
+        "@rollup/plugin-node-resolve": "^15.2.3",
         "@types/jest": "^29.5.11",
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
         "@typescript-eslint/parser": "^6.15.0",
+        "@web/dev-server": "^0.4.1",
+        "@web/dev-server-rollup": "^0.6.1",
         "eslint-plugin-jest": "^27.6.0",
         "jest": "^29.7.0",
+        "rollup-plugin-copy": "^3.5.0",
+        "rollup-plugin-minify-html-literals": "^1.2.6",
+        "rollup-plugin-summary": "^2.0.0",
+        "rollup-plugin-terser": "^7.0.2",
         "ts-jest": "^29.1.1",
         "typescript": "^4.7.2"
     }
