--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "start": "npm run serve",
         "test": "jest",
         "build": "npm run build:typescript && npm run generate:listings && npm run build:rollup",
-        "build:typescript" : "tsc",
-        "build:rollup" : "rollup -c",
+        "build:typescript": "tsc",
+        "build:rollup": "rollup -c",
         "serve": "npm run build && npm run serve:main",
         "serve:main": "npm run serve:typescript & npm run serve:app",
         "serve:typescript": "tsc --watch --preserveWatchOutput",
@@ -27,6 +27,7 @@
         "pwa-helpers": "^0.9.1",
         "redux": "^5.0.1",
         "redux-thunk": "^3.1.0",
+        "reselect": "^5.0.1",
         "sharp": "^0.33.1",
         "ts-command-line-args": "^2.5.1",
         "zod": "^3.22.4",
