--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "scripts": {
         "start": "npm run serve",
         "test": "jest",
-        "build": "npm run build:typescript && npm run generate:listings && npm run build:rollup",
+        "build": "npm run build:typescript && npm run compile:sprouts && npm run generate:listings && npm run build:rollup",
         "build:typescript": "tsc",
         "build:rollup": "rollup -c",
         "serve": "npm run build && npm run serve:main",
         "serve:main": "npm run serve:typescript & npm run serve:app",
         "serve:typescript": "tsc --watch --preserveWatchOutput",
         "serve:app": "wds --node-resolve --port=8081",
+        "compile:sprouts": "node ./build/tools/compile-sprouts.js",
         "generate:listings": "node ./build/tools/generate-directory-listings.js",
         "generate:schemas": "node ./build/tools/generate-schemas.js"
     },
