Rework how building works to have a dist directory.
Note that things like index.html, sprouts/ etc are not copied to build at the moment.

Part of #3.

--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
     "repository": "jkomoros/code-sprout",
     "type": "module",
     "scripts": {
-        "start": "npm run serve",
+        "start": "npm run build:typescript && npm run generate && npm run serve",
         "test": "jest",
-        "build": "npm run build:typescript && npm run compile:sprouts && npm run generate:listings && npm run build:rollup",
+        "build": "npm run build:typescript && npm run generate && npm run build:rollup",
         "build:typescript": "tsc",
         "build:rollup": "rollup -c",
-        "serve": "npm run build && npm run serve:main",
-        "serve:main": "npm run serve:typescript & npm run serve:app",
+        "serve": "npm run serve:typescript & npm run serve:app",
         "serve:typescript": "tsc --watch --preserveWatchOutput",
         "serve:app": "wds --node-resolve --port=8081",
-        "compile:sprouts": "node ./build/tools/compile-sprouts.js",
+        "generate": "npm run generate:sprouts && npm run generate:listings",
+        "generate:sprouts": "node ./build/tools/compile-sprouts.js",
         "generate:listings": "node ./build/tools/generate-directory-listings.js",
         "generate:schemas": "node ./build/tools/generate-schemas.js"
     },
