Create an asset-copying pipeline with `npm run build:copy`.
The configuration is the same one rollup uses to copy over files.

Part of #3.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "repository": "jkomoros/code-sprout",
     "type": "module",
     "scripts": {
-        "start": "npm run build:typescript && npm run generate && npm run serve",
+        "start": "npm run build:local && npm run serve",
         "test": "jest",
-        "build": "npm run build:typescript && npm run generate && npm run build:rollup",
+        "build": "npm run build:local && npm run build:rollup",
+        "build:local": "npm run build:typescript && npm run generate && npm run build:copy",
         "build:typescript": "tsc",
         "build:rollup": "rollup -c",
+        "build:copy": "node ./build/tools/copy-assets.js",
         "serve": "npm run serve:typescript & npm run serve:app",
         "serve:typescript": "tsc --watch --preserveWatchOutput",
         "serve:app": "wds --node-resolve --port=8081",
