--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
         "serve": "npm run serve:typescript & npm run serve:app",
         "serve:typescript": "tsc --watch --preserveWatchOutput",
         "serve:app": "wds --node-resolve --port=8081",
+        "serve:generate": "node ./build/tools/watch.js",
         "generate": "npm run generate:sprouts && npm run generate:listings",
         "generate:sprouts": "node ./build/tools/compile-sprouts.js",
         "generate:listings": "node ./build/tools/generate-directory-listings.js",
         "generate:schemas": "node ./build/tools/generate-schemas.js"
     },
     "dependencies": {
+        "chokidar": "^3.5.3",
         "dotenv": "^16.3.1",
         "enquirer": "^2.4.1",
         "eslint": "^8.56.0",
         "fast-json-patch": "^3.1.1",
         "gpt-tok": "^0.0.1",
         "lit": "^3.1.0",
+        "minimatch": "^9.0.3",
         "openai": "^4.24.1",
         "pwa-helpers": "^0.9.1",
         "redux": "^5.0.1",
