--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "generate": "npm run generate:sprouts && npm run generate:listings",
         "generate:sprouts": "node ./build/tools/compile-sprouts.js",
         "generate:listings": "node ./build/tools/generate-directory-listings.js",
-        "generate:schemas": "node ./build/tools/generate-schemas.js"
+        "generate:schemas": "node ./build/tools/generate-schemas.js",
+        "deploy": "npm run build && firebase deploy"
     },
     "dependencies": {
         "chokidar": "^3.5.3",
@@ -26,6 +27,7 @@
         "enquirer": "^2.4.1",
         "eslint": "^8.56.0",
         "fast-json-patch": "^3.1.1",
+        "firebase-tools": "^13.0.2",
         "gpt-tok": "^0.0.1",
         "lit": "^3.1.0",
         "minimatch": "^9.0.3",
