Add an allowFormatting flag.
This allows sprouts to declare that they want formatting.

Note: the web runner doesn't currently support it.

Part of #3.

--- a/schemas/sprout_config.json
+++ b/schemas/sprout_config.json
@@ -16,6 +16,10 @@
 		"allowImages": {
 			"type": "boolean",
 			"description": "Whether the bot allows images"
+		},
+		"allowFormatting": {
+			"type": "boolean",
+			"description": "Whether the bot should return markdown formatting"
 		}
 	},
 	"required": [
