--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "chokidar": "^3.5.3",
+        "dompurify": "^3.0.6",
         "dotenv": "^16.3.1",
         "enquirer": "^2.4.1",
         "eslint": "^8.56.0",
@@ -30,6 +31,7 @@
         "firebase-tools": "^13.0.2",
         "gpt-tok": "^0.0.1",
         "lit": "^3.1.0",
+        "marked": "^11.1.1",
         "minimatch": "^9.0.3",
         "openai": "^4.24.1",
         "pwa-helpers": "^0.9.1",
@@ -45,6 +47,7 @@
         "@rollup/plugin-commonjs": "^25.0.7",
         "@rollup/plugin-dynamic-import-vars": "^2.1.2",
         "@rollup/plugin-node-resolve": "^15.2.3",
+        "@types/dompurify": "^3.0.5",
         "@types/jest": "^29.5.11",
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
