--- a/schemas/sprout_config.json
+++ b/schemas/sprout_config.json
@@ -1,9 +1,10 @@
 {
 	"type": "object",
 	"properties": {
-		"version": {
+		"formatVersion": {
 			"type": "number",
-			"const": 0
+			"const": 0,
+			"description": "The version of the library the sprout is targetting"
 		},
 		"title": {
 			"type": "string",
@@ -23,7 +24,7 @@
 		}
 	},
 	"required": [
-		"version"
+		"formatVersion"
 	],
 	"additionalProperties": false,
 	"$schema": "http://json-schema.org/draft-07/schema#"
