--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "enquirer": "^2.4.1",
         "eslint": "^8.56.0",
         "fast-json-patch": "^3.1.1",
+        "fflate": "^0.8.1",
+        "file-saver": "^2.0.5",
         "firebase-tools": "^13.0.2",
         "gpt-tok": "^0.0.1",
         "lit": "^3.1.0",
@@ -48,6 +50,7 @@
         "@rollup/plugin-dynamic-import-vars": "^2.1.2",
         "@rollup/plugin-node-resolve": "^15.2.3",
         "@types/dompurify": "^3.0.5",
+        "@types/file-saver": "^2.0.7",
         "@types/jest": "^29.5.11",
         "@types/node": "^20.10.5",
         "@typescript-eslint/eslint-plugin": "^6.15.0",
