Plug in anthropic provider.
It _almost_ works, but computePromptStreamAnthropic just flat out lies about the type of the stream to get it to compile.

The model isnt' activated yet because it's not in the default stack.

Part of #5.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
         "deploy": "npm run build && firebase deploy"
     },
     "dependencies": {
+        "@anthropic-ai/sdk": "^0.12.0",
+        "@anthropic-ai/tokenizer": "^0.0.4",
         "chokidar": "^3.5.3",
         "dompurify": "^3.0.6",
         "dotenv": "^16.3.1",
