--- a/schemas/sprout_config.json
+++ b/schemas/sprout_config.json
@@ -14,6 +14,18 @@
 			"type": "string",
 			"description": "A description of the sprout"
 		},
+		"forkedFrom": {
+			"anyOf": [
+				{
+					"type": "string"
+				},
+				{
+					"type": "string",
+					"format": "uri"
+				}
+			],
+			"description": "The URL or name of the sprout this was forked from"
+		},
 		"allowImages": {
 			"type": "boolean",
 			"description": "Whether the bot allows images"
